fix: styling issues - Remove white space under footer (caused by overflow content of accordions). - Change fallback background color of carousel images. - Adjust proptypes of mainBanner title.

--- a/src/components/Accordion/Accordion.module.css
+++ b/src/components/Accordion/Accordion.module.css
@@ -1,12 +1,7 @@
-/* Todo 1 : fix empty white background between summary and p (already done with pseudo-element but can probably be improved) */
-
 @import '../../helpers/css-variables.css';
 
 .accordion-item {
 	margin-top: 33px;
-	/* Could be used to fix Todo 1 */
-	/* background-color: #f6f6f6;
-	border-radius: 5px; */
 }
 
 .accordion-item button {
@@ -41,6 +36,10 @@
 	margin-top: 0;
 	margin-bottom: 0;
 	padding-bottom: 20px;
+}
+
+.accordion-content {
+	overflow: hidden;
 }
 
 .accordion-content p {
