--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -19,7 +19,7 @@
 		rgba(255, 255, 255, 0) 0%,
 		rgba(0, 0, 0, 0.5) 100%
 	);
-	background-color: var(--primary-color);
+	background-color: rgba(0, 0, 0, 0.3);
 }
 
 .carousel-item::after {
